# Thalassa

./: .gitignore  README.md  pyproject.toml
src/: Thalassa.py  main.py
src/code/: button.py  chatlogs.py  chats_tab.py  configs.py  cursed_isles.py  gui.py  log_parser.py  old_gui.py  options_tab.py  timer.py
src/media/: settings.pkl
src/thalassa_core/: chats_tab.py  configs.py  cursed_isles.py  discord_bot.py  hom.py  log_parser.py  options_tab.py  rumble.py  tkinter_widgets.py
