[project]
name = "pirate-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "platformdirs>=4.5.0",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "ttkbootstrap>=1.19.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
    "pytest>=9.0.1",
]
