[project]
name = "Thalassa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "discord-py>=2.6.4",
    "platformdirs>=4.5.0",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.2.1",
    "ttkbootstrap>=1.19.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
    "pytest>=9.0.1",
]
